kubernetes-manifest/homebox/deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: homebox
    namespace: homebox
spec:
    selector:
        app: homebox
    ports:
        - port: 7745
          targetPort: 7745
          protocol: TCP
    type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: homebox
    namespace: homebox
spec:
    replicas: 1
    selector:
        matchLabels:
            app: homebox
    template:
        metadata:
            labels:
                app: homebox
        spec:
            containers:
                - name: homebox
                  image: ghcr.io/sysadminsmedia/homebox:main
                  ports:
                      - containerPort: 7745
                  volumeMounts:
                      - name: homebox-data
                        mountPath: /data
            volumes:
                - name: homebox-data
                  persistentVolumeClaim:
                      claimName: homebox-data-pvc
