kubernetes-manifest/homebox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: homebox-ingress
    namespace: homebox
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: homebox.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: homebox
                            port:
                                number: 7745
